--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="dimen_7dp">7dp</dimen>
     <dimen name="dimen_3dp">3dp</dimen>
     <dimen name="dimen_12sp">12sp</dimen>
+    <dimen name="dimen_66dp">66dp</dimen>
 </resources>
