--- a/app/src/main/res/layout/row_image_view.xml
+++ b/app/src/main/res/layout/row_image_view.xml
@@ -49,6 +49,7 @@
                 android:layout_height="@dimen/dimen_136dp"
                 android:layout_marginTop="@dimen/dimen_10dp"
                 android:scaleType="fitXY"
+                imageUrl="@{viewModel.setLogoImage(position)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/question_textView"
