--- a/app/src/main/res/layout/row_email_text_view.xml
+++ b/app/src/main/res/layout/row_email_text_view.xml
@@ -34,7 +34,7 @@
                 android:layout_marginTop="@dimen/dimen_5dp"
                 android:layout_marginEnd="@dimen/dimen_5dp"
                 android:layout_marginBottom="@dimen/dimen_5dp"
-                android:text="@{viewModel.setQuestion(position)}"
+                android:hint="@{viewModel.setQuestion(position)}"
                 android:textColor="@color/purple_500"
                 android:textSize="@dimen/dimen_14sp"
                 app:layout_constraintStart_toStartOf="parent"
