--- a/app/src/main/res/layout/row_multi_selection_view.xml
+++ b/app/src/main/res/layout/row_multi_selection_view.xml
@@ -53,7 +53,7 @@
                 android:textColor="@color/purple_500"
                 android:textSize="@dimen/dimen_14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/question_textView"
                 tools:ignore="MissingConstraints"
                 android:orientation="vertical" />
 
