--- a/app/src/main/res/layout/row_email_text_view.xml
+++ b/app/src/main/res/layout/row_email_text_view.xml
@@ -37,6 +37,7 @@
                 android:hint="@{viewModel.setQuestion(position)}"
                 android:textColor="@color/purple_500"
                 android:textSize="@dimen/dimen_14sp"
+                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@._-"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="MissingConstraints" />
