--- a/app/src/main/res/layout/row_image_view.xml
+++ b/app/src/main/res/layout/row_image_view.xml
@@ -46,14 +46,15 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_136dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_10dp"
                 android:scaleType="fitXY"
                 imageUrl="@{viewModel.setLogoImage(position)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/question_textView"
-                tools:ignore="MissingConstraints" />
+                tools:ignore="MissingConstraints"
+                android:layout_marginBottom="@dimen/dimen_10dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
