--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/retry"
-            android:visibility="visible"
+            android:visibility="gone"
             tools:ignore="MissingConstraints"
             android:layout_marginBottom="@dimen/dimen_10dp"
             app:layout_constraintStart_toStartOf="parent"
